# bolt

./: .gitpod.yml  Cargo.toml  LICENSE  README.md  makefile
.github/: FUNDING.yml
api/: Cargo.toml
api/src/: main.rs
src/: gui.rs  main.rs  net.rs
src/gui/: interface.rs  mod.rs  update.rs  view.rs
src/net/: request.rs
tauri/: .gitignore  Cargo.toml  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: main.rs
yew/: Cargo.toml  index.html  script.js  style.css
yew/src/: main.rs  net.rs  style.rs  utils.rs
yew/src/html_sources/: home.rs
yew/src/process/: update.rs
yew/src/style/: style.rs
yew/src/view/: collections.rs  console.rs  header.rs  home.rs  mod.rs  navbar.rs  param.rs  request.rs  response.rs  sidebar1.rs  sidebar2.rs
