[package]
name = "bolt-api"
version = "0.2.1"
edition = "2021"
authors = ["Hiro <yirohido@gmail.com>"]
license = "MIT"
description = "Bolt API Platform"
readme = "README.md"
homepage = "https://github.com/hiro-codes/bolt"
repository = "https://github.com/hiro-codes/bolt"
keywords = ["http", "api", "cli"]
categories = ["web-programming"]

[dependencies]
serde = "1.0.155"
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
iced = {version = "0.8.0", features = ["glow"]}
