[package]
name = "bolt-yew"
version = "0.6.2"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
yew = {version = "0.20.0", features = ["csr"] }
serde = "1.0.155"
web-sys = {version="0.3.61", features = ["Window", "DomTokenList", "Element", "CustomEvent", "HtmlTextAreaElement", "HtmlSelectElement"] }
tauri-sys = { git = "https://github.com/hiro-codes/tauri-sys", features=["tauri", "event"] }
wasm-bindgen-futures = "0.4.34"
futures = "0.3.27"
serde_json = "1.0.94"
stylist = { version="0.12.0", features=["yew_integration"] }
lazy_static = "1.4.0"